--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable(${PROJECT_NAME} ${SCRF} Main.cpp)
 find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
 target_link_libraries(${PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system)
 if (DEBUG)
-    add_definitions(-DDEBUG=1)
+#    add_definitions(-DDEBUG=1)
 endif (DEBUG)
