--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED
 target_link_libraries(${PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system)
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wa,-mbig-obj")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
-add_definitions(-DDEBUG=1)
+
+#add_definitions(-DDEBUG=1)
